# drs4

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html  py-modindex.html  pyproject.toml  search.html
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle
.doctrees/_apidoc/: drs4.ctrl.scpi.doctree  drs4.qlook.doctree  drs4.specs.common.doctree  drs4.specs.doctree
.github/workflows/: tests.yaml
0.1.0/: .buildinfo  genindex.html
0.1.0/.doctrees/: environment.pickle  index.doctree
0.1.0/_apidoc/: drs4.ctrl.cw.html  drs4.ctrl.html  drs4.ctrl.scpi.html  drs4.daq.html  drs4.qlook.html  drs4.specs.common.html  drs4.specs.csv.html  drs4.specs.html  drs4.specs.ms.html  drs4.specs.vdif.html
0.2.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
0.2.0/.doctrees/: environment.pickle  index.doctree
0.2.0/_apidoc/: drs4.cal.dsbs.html  drs4.cal.html  drs4.ctrl.cw.html  drs4.ctrl.html  drs4.ctrl.scpi.html  drs4.ctrl.self.html  drs4.daq.html  drs4.daq.tcp.html  drs4.daq.udp.html  drs4.html  drs4.qlook.gui.html  drs4.qlook.html  drs4.specs.common.html  drs4.specs.csv.html  drs4.specs.gain.html  drs4.specs.html  drs4.specs.ms.html  drs4.specs.vdif.html  drs4.utils.html
0.2.0/_modules/: index.html
0.2.0/_static/: switcher.json
0.3.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.3.0/.doctrees/: environment.pickle
0.3.0/_apidoc/: drs4.cal.dsbs.html  drs4.cal.html  drs4.ctrl.cw.html  drs4.ctrl.html  drs4.ctrl.scpi.html  drs4.ctrl.self.html  drs4.daq.html  drs4.daq.tcp.html  drs4.daq.udp.html  drs4.html  drs4.qlook.gui.html  drs4.qlook.html  drs4.specs.common.html  (+6 more)
0.4.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.5.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
0.6.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_apidoc/: drs4.cal.dsbs.html  drs4.cal.html  drs4.ctrl.self.html  drs4.daq.tcp.html  drs4.daq.udp.html  drs4.html  drs4.obs.cal.html  drs4.obs.sci.html  drs4.qlook.gui.html  drs4.specs.gain.html  drs4.utils.html
_modules/: index.html
_sources/: index.md.txt
docs/: build  conf.py
drs4/: __init__.py  daq.py  specs.py  utils.py  vdif.py
tests/: test_init.py
(+216 files in other folders)
