[tool.poetry]
name = "drs4"
version = "0.1.0"
description = "Control and data acquisition for DRS4"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
dateparser = "^1.2"
fire = ">=0.5, <1.0"
tqdm = "^4.66"
xarray = "^2024.0 | ^2025.0"
xarray-dataclasses = "^1.8"
zarr = "^2.16"

[tool.poetry.group.dev.dependencies]
black = "^24.0 | ^25.0"
ipython = "^8.0"
pytest = "^8.0"

[tool.pyright]
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "warning"
reportUnknownMemberType = "warning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
